fix homepage images to align at 100% browser zoom

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,6 @@ h1 {
 .flexColumn {
   display: flex;
   flex-direction: row;
-  min-height: 75vh;
   justify-content: space-between;
 }
 
@@ -78,7 +77,7 @@ p {
 }
 
 #mindBlown {
-  margin-top: 6.7rem;
+  margin-top: 5.4rem;
 }
 
 .blogTitle {
